# Assembly101-NF

./: .gitignore  README.md  index.html  pyproject.toml
asm/: __init__.py  config.py  data.py  evaluate.py  extract.py  features.py  fetch.py  model.py  report.py  train.py
data/processed/: steps.parquet  vocab.json
results/: ar.pt  metrics.json  nf.pt
